# vibe

./: .gitignore  .gitleaks.toml  .mise.toml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .vibe.toml  .vibedev  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  THIRD-PARTY-LICENSES.md  deno.json  eslint.config.js  flake.nix  jsr.json  justfile  lefthook.yml  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  rust-toolchain.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: vibe-architect-expert.md  vibe-code-review-expert.md  vibe-develop-expert.md  vibe-legal-expert.md  vibe-security-expert.md
.claude/commands/: vibe-release-new-version.md
.claude/commands/vibe/: check-all.md  release-new-version.md
.claude/hooks/: format-file.sh  security-check.sh
.claude/rules/: ci-cd-workflows.md  docs-i18n.md  dynamic-context.md  git-workflow.md  github-actions-sha-pinning.md  markdown.md  security.md  tool-versions.md
.claude/skills/vibe-implement/: SKILL.md
.claude/skills/vibe-release-new-version/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-takumi-guard/: action.yml
.github/actions/setup-toolchain/: action.yml
.github/workflows/: beta-release.yml  ci.yml  claude-code-review.yml  claude-review.yml  claude.yml  docs.yml  nix.yml  performance.yml  publish-jsr.yml  publish-npm.yml  release.yml  sync-mise-plugin.yml
.oxlint/plugins/: vibe-security.js
Formula/: vibe-beta-versioned.rb  vibe-beta.rb  vibe-versioned.rb  vibe.rb
benchmarks/: copy-strategies.bench.ts  react-native.vibe.toml
docs/: SECURITY_CHECKLIST.ja.md  SECURITY_CHECKLIST.md  architecture.ja.md  architecture.md  astro.config.ts  copy-strategies.md  eslint.config.mjs  package.json  pnpm-lock.yaml
docs/decisions/: 0001-runtime-abstraction.md  0002-trust-mechanism.md  0003-copy-strategies.md
docs/public/: CNAME
docs/specifications/: bun-runtime.ja.md  bun-runtime.md  clean-strategies.ja.md  clean-strategies.md  copy-strategies.ja.md  copy-strategies.md  multi-runtime.ja.md  multi-runtime.md  native-clone.ja.md  native-clone.md
docs/src/components/: CustomSocialIcons.astro  Head.astro  SkipLink.astro
mise-plugin/: .luacheckrc  .mise.toml  README.md  metadata.lua
mise-plugin/hooks/: available.lua  env_keys.lua  post_install.lua  pre_install.lua
npm/: README.md  package.json  tsconfig.json  tsup.config.ts
npm/test/: build.test.ts  env.test.ts  fs.test.ts  process.test.ts
rust/: Cargo.toml
rust/crates/vibe/: Cargo.toml  build.rs
rust/crates/vibe-core/: Cargo.toml
rust/crates/vibe-core/src/: ansi.rs  atomic.rs  clock.rs  config.rs  config_loader.rs  config_path.rs  copy_runner.rs  error.rs  fast_remove.rs  fuzzy.rs  git.rs  glob.rs  hash.rs  hooks.rs  http.rs  io.rs  lib.rs  mru.rs  output.rs  progress.rs  prompt.rs  repo_info.rs  settings.rs  settings_io.rs  shell.rs  stdin.rs  timestamp.rs  upgrade_meta.rs  worktree_ops.rs  worktree_path.rs  worktree_rename.rs  worktree_validator.rs
rust/crates/vibe-core/src/commands/: clean.rs  clean_tests.rs  config.rs  home.rs  jump.rs  mod.rs  rename.rs  scratch.rs  shell_setup.rs  start.rs  start_tests.rs  trust.rs  untrust.rs  upgrade.rs  verify.rs
rust/crates/vibe-core/src/completion/: fish.rs  mod.rs  spec.rs  zsh.rs
rust/crates/vibe-core/src/completion/snapshots/: fish.snap  zsh.snap
rust/crates/vibe-core/src/copy/: detector.rs  mod.rs  native.rs  strategies.rs  types.rs
rust/crates/vibe-native/: Cargo.toml
rust/crates/vibe-native/src/: darwin.rs  error.rs  lib.rs  linux.rs  unsupported.rs
rust/crates/vibe-test-support/: Cargo.toml
rust/crates/vibe-test-support/src/: lib.rs
rust/crates/vibe/src/: cli.rs  eval_output.rs  main.rs  version.rs
rust/crates/vibe/src/commands/: mod.rs
rust/crates/vibe/tests/: eval_contract.rs
schemas/: settings.schema.json
scripts/: benchmark.ts  build-deb.ts  build.ts  generate-third-party-licenses.ts  generate-version.ts  get-version.ts  security-check.ts  stage-platform-package.ts  sync-version.ts  verify-platform-tarball.ts
src/: version.ts
src/commands/: clean.test.ts  clean.ts  config.test.ts  config.ts  start.test.ts  start.ts  trust.test.ts  trust.ts  untrust.test.ts  untrust.ts  upgrade.test.ts  upgrade.ts  verify.test.ts  verify.ts
src/context/: testing.ts
src/errors/: handler.test.ts
src/runtime/: index.test.ts  index.ts  types.ts
src/runtime/deno/: env.test.ts  ffi.ts  fs.test.ts  process.test.ts  signals.ts
src/types/: config.ts
src/utils/: config.test.ts  config.ts  fast-remove.test.ts  fast-remove.ts  git.test.ts  git.ts  glob.test.ts  glob.ts  hash.test.ts  hash.ts  hooks.test.ts  hooks.ts  input.test.ts  input.ts  output.test.ts  output.ts  progress.test.ts  progress.ts  prompt.test.ts  prompt.ts  rsync.test.ts  rsync.ts  settings.test.ts  settings.ts  trust.ts  worktree-path.test.ts  worktree-path.ts
tests/e2e/: clean.test.ts  config.test.ts  interactive.test.ts  start.test.ts  trust.test.ts  upgrade.test.ts  vitest.config.ts
(+73 files in other folders)
